--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Micro implementation of crawler",
   "main": "app.js",
   "scripts": {
-    "test": "make cover"
+    "test": "make ci"
   },
   "repository": {
     "type": "git",
