--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 node_js:
   - "0.11"
   - "0.10"
+services:
+  - couchdb
+  - mongodb
 before_install:
   - "export NODE_ENV=test"
   - "npm config set strict-ssl false"
