grunt tasks for jsdoc, jshint, mochaTest

--- a/package.json
+++ b/package.json
@@ -1,41 +1,44 @@
 {
-    "name": "microcrawler",
-    "version": "0.0.1",
-    "description": "Micro implementation of crawler",
-    "main": "app.js",
-    "scripts": {
-        "test": "make ci"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/korczis/microcrawler.git"
-    },
-    "author": "Tomas Korcak <korczis@gmail.com>",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/korczis/microcrawler/issues"
-    },
-    "files": [
-        "lib"
-    ],
-    "main": "lib/index.js",
-    "homepage": "https://github.com/korczis/microcrawler",
-    "directories": {
-        "bin": "bin",
-        "lib": "lib"
-    },
-    "dependencies": {
-        "cheerio": "^0.13.1",
-        "node.extend": "^1.0.10",
-        "deferred": "^0.6.8",
-        "request": "^2.34.0",
-        "nano": "^5.7.1",
-        "amdefine": "^0.1.0"
-    },
-    "devDependencies": {
-        "mocha": "^1.18.2",
-        "chai": "^1.9.1",
-        "istanbul": "^0.2.6",
-        "coveralls": "^2.10.0"
-    }
+  "name": "microcrawler",
+  "version": "0.0.1",
+  "description": "Micro implementation of crawler",
+  "main": "lib/index.js",
+  "scripts": {
+    "test": "make ci"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/korczis/microcrawler.git"
+  },
+  "author": "Tomas Korcak <korczis@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/korczis/microcrawler/issues"
+  },
+  "files": [
+    "lib"
+  ],
+  "homepage": "https://github.com/korczis/microcrawler",
+  "directories": {
+    "bin": "bin",
+    "lib": "lib"
+  },
+  "dependencies": {
+    "cheerio": "^0.13.1",
+    "node.extend": "^1.0.10",
+    "deferred": "^0.6.8",
+    "request": "^2.34.0",
+    "nano": "^5.7.1",
+    "amdefine": "^0.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^1.18.2",
+    "chai": "^1.9.1",
+    "istanbul": "^0.2.6",
+    "coveralls": "^2.10.0",
+    "grunt": "^0.4.4",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-jsdoc": "^0.5.4",
+    "grunt-mocha-test": "^0.10.2"
+  }
 }
