Use minimist, support for loading additional processors from dir via cmd-line

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "request": "^2.34.0",
     "nano": "^5.7.1",
     "amdefine": "^0.1.0",
-    "optimist": "^0.6.1"
+    "minimist": "0.0.8"
   },
   "devDependencies": {
     "mocha": "^1.18.2",
