--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "amdefine": "^0.1.0",
     "minimist": "0.0.8",
     "winston": "^0.7.3",
-    "faye": "^1.0.1"
+    "faye": "^1.0.1",
+    "moment": "^2.6.0"
   },
   "devDependencies": {
     "mocha": "^1.18.2",
