--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 language: node_js
+
 node_js:
   - "0.11"
   - "0.10"
+
 services:
   - couchdb
   - mongodb
   - rabbitmq
+
+before_script:
+  curl -X PUT localhost:5984/_config/admins/apollo -d '"apollo"'
+
 before_install:
   - "export NODE_ENV=test"
   - "npm config set strict-ssl false"
