--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,15 @@ language: node_js
 node_js:
   - "0.11"
   - "0.10"
-
 services:
   - couchdb
   - mongodb
   - rabbitmq
-
-before_script:
-  curl -X PUT localhost:5984/_config/admins/apollo -d '"apollo"'
-
 before_install:
   - "export NODE_ENV=test"
   - "npm config set strict-ssl false"
   - "npm install -g chai istanbul jsdoc mocha"
 before_script:
-#  - curl -X PUT localhost:5984/microcrawler
+# - curl -X PUT localhost:5984/microcrawler
+# - curl -X PUT localhost:5984/_config/admins/apollo -d '"apollo"'
   - curl -HContent-Type:application/json -vXPUT http://localhost:5984/_users/org.couchdb.user:apollo --data-binary '{"_id": "org.couchdb.user:apollo","name": "apollo","roles": ["admin"],"type": "user","password": "apollo"}'
