--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_install:
   - "npm install -g chai istanbul jsdoc mocha"
 before_script:
   - curl -X PUT localhost:5984/microcrawler
-#  - curl -HContent-Type:application/json -vXPUT http://localhost:5984/_users/org.couchdb.user:apollo --data-binary '{"_id": "org.couchdb.user:apollo","name": "apollo","roles": ["admin"],"type": "user","password": "apollo"}'
+  - curl -HContent-Type:application/json -vXPUT http://localhost:5984/_users/org.couchdb.user:apollo --data-binary '{"_id": "org.couchdb.user:apollo","name": "apollo","roles": ["admin"],"type": "user","password": "apollo"}'
