--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ before_install:
   - "npm config set strict-ssl false"
   - "npm install -g chai istanbul jsdoc mocha"
 before_script:
+  - "wait 10"
   - "curl -HContent-Type:application/json -vXPUT http://localhost:5984/_users/org.couchdb.user:apollo --data-binary '{\"_id\": \"org.couchdb.user:apollo\",\"name\": \"apollo\",\"roles\": [\"admin\"],\"type\": \"user\",\"password\": \"apollo\"}'"
