--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
     "lib": "lib"
   },
   "dependencies": {
-    "cheerio": "^0.17.0",
-    "node.extend": "^1.0.10",
-    "deferred": "^0.7.1",
-    "request": "^2.34.0",
-    "nano": "^5.7.1",
     "amdefine": "^0.1.0",
-    "minimist": "0.2.0",
-    "winston": "^0.7.3",
-    "faye": "^1.0.1",
-    "moment": "^2.6.0",
-    "deepmerge": "^0.2.7"
+    "cheerio": "^0.19.0",
+    "deepmerge": "^0.2.7",
+    "deferred": "^0.7.2",
+    "express": "^4.12.4",
+    "faye": "^1.1.1",
+    "minimist": "1.1.1",
+    "moment": "^2.10.3",
+    "nano": "^6.0.2",
+    "node.extend": "^1.1.3",
+    "request": "^2.55.0",
+    "winston": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "^1.18.2",
