--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "cheerio": "^0.19.0",
     "deepmerge": "^0.2.7",
     "deferred": "^0.7.2",
+    "elasticsearch": "^4.1.0",
     "express": "^4.12.4",
     "faye": "^1.1.1",
-    "minimist": "1.1.1",
     "moment": "^2.10.3",
     "nano": "^6.0.2",
     "node.extend": "^1.1.3",
+    "nomnom": "^1.8.1",
     "request": "^2.55.0",
     "sqlite3": "^3.0.8",
     "winston": "^1.0.0"
