--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cheerio": "^0.19.0",
     "deepmerge": "^0.2.7",
     "deferred": "^0.7.2",
+    "diacritics": "^1.2.1",
     "elasticsearch": "^4.1.0",
     "express": "^4.12.4",
     "faye": "^1.1.1",
