--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "microcrawler",
-  "version": "0.0.5",
+  "version": "0.1.0",
   "description": "Micro implementation of crawler",
   "main": "lib/index.js",
   "scripts": {
+    "eslint": "node ./node_modules/eslint/bin/eslint.js lib/",
     "test": "make ci"
   },
   "repository": {
@@ -25,6 +26,8 @@
   },
   "dependencies": {
     "amdefine": "^0.1.0",
+    "babel": "^5.8.21",
+    "babel-runtime": "^5.8.20",
     "cheerio": "^0.19.0",
     "deepmerge": "^0.2.7",
     "deferred": "^0.7.2",
@@ -41,13 +44,17 @@
     "winston": "^1.0.0"
   },
   "devDependencies": {
-    "mocha": "^1.18.2",
+    "babel-eslint": "^4.0.10",
     "chai": "^1.9.1",
-    "istanbul": "^0.2.6",
     "coveralls": "^2.10.0",
+    "eslint": "^1.1.0",
+    "eslint-config-airbnb": "0.0.7",
+    "eslint-plugin-react": "^3.2.3",
     "grunt": "^0.4.4",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-jsdoc": "^0.5.4",
-    "grunt-mocha-test": "^0.10.2"
+    "grunt-mocha-test": "^0.10.2",
+    "istanbul": "^0.2.6",
+    "mocha": "^1.18.2"
   }
 }
