--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
-  "stage": 0,
-  "loose": "all"
+  "presets": [
+    "es2015",
+    "stage-0",
+    "stage-1",
+    "stage-2",
+    "stage-3"
+  ]
 }
 
