--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "eslint": "node ./node_modules/eslint/bin/eslint.js lib/ test/",
-    "test": "make ci"
+    "test": "mocha --compilers js:babel-register test/**/*Test.js"
   },
   "repository": {
     "type": "git",
@@ -25,14 +25,19 @@
     "lib": "lib"
   },
   "dependencies": {
-    "amdefine": "^0.1.0",
-    "babel": "^5.8.21",
-    "babel-runtime": "^5.8.20",
-    "cheerio": "^0.19.0",
+    "amdefine": "^1.0.0",
+    "amqplib": "^0.4.2",
+    "babel": "^6.5.2",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-register": "^6.3.13",
+    "babel-runtime": "^6.3.19",
+    "cheerio": "^0.20.0",
+    "couchbase": "^2.2.2",
+    "crypto": "0.0.3",
     "deepmerge": "^0.2.7",
     "deferred": "^0.7.2",
     "diacritics": "^1.2.1",
-    "elasticsearch": "^4.1.0",
+    "elasticsearch": "^11.0.1",
     "express": "^4.12.4",
     "faye": "^1.1.1",
     "moment": "^2.10.3",
@@ -41,21 +46,25 @@
     "nomnom": "^1.8.1",
     "request": "^2.55.0",
     "sqlite3": "^3.0.8",
-    "winston": "^1.0.0"
+    "traceur": "0.0.111",
+    "traceur-source-maps": "^1.0.6",
+    "winston": "^2.1.1"
   },
   "devDependencies": {
-    "babel-eslint": "^4.0.10",
-    "chai": "^1.9.1",
+    "babel-eslint": "^5.0.0-beta6",
+    "babel-preset-es2015": "^6.3.13",
+    "chai": "^3.4.1",
     "coveralls": "^2.10.0",
     "eslint": "^1.1.0",
-    "eslint-config-airbnb": "0.0.7",
+    "eslint-config-airbnb": "2.1.1",
     "eslint-plugin-react": "^3.2.3",
     "grunt": "^0.4.4",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-jsdoc": "^0.5.4",
-    "grunt-mocha-test": "^0.10.2",
-    "istanbul": "^0.2.6",
-    "mocha": "^1.18.2",
+    "grunt-babel": "^6.0.0",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-jsdoc": "^1.1.0",
+    "grunt-mocha-test": "^0.12.7",
+    "istanbul": "^0.4.1",
+    "mocha": "^2.3.4",
     "mocha-traceur": "^2.1.0"
   }
 }
