--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "nano": "^6.0.2",
     "node.extend": "^1.1.3",
     "nomnom": "^1.8.1",
+    "random-ip": "0.0.1",
     "sqlite3": "^3.0.8",
     "superagent": "^2.2.0",
     "superagent-cache": "^1.6.0",
