--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "microcrawler",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Micro implementation of crawler",
   "main": "lib/index.js",
   "scripts": {
     "eslint": "node ./node_modules/eslint/bin/eslint.js lib/ test/",
-    "test": "mocha --compilers js:babel-register test/**/*Test.js"
+    "test": "mocha --compilers js:babel-register test/**/*Test.js",
+    "build": "babel src -d lib"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,12 @@
     "microcrawler-worker": "./bin/microcrawler-worker"
   },
   "files": [
-    "lib"
+    "bin",
+    "config",
+    "docks",
+    "examples",
+    "lib",
+    "test"
   ],
   "homepage": "https://github.com/korczis/microcrawler",
   "directories": {
@@ -36,8 +42,13 @@
   "dependencies": {
     "amdefine": "^1.0.0",
     "amqplib": "^0.4.2",
-    "babel": "^6.5.2",
+    "babel-cli": "^6.14.0",
+    "babel-eslint": "^5.0.0-beta6",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.3.13",
+    "babel-preset-stage-1": "^6.13.0",
+    "babel-preset-stage-2": "^6.13.0",
+    "babel-preset-stage-3": "^6.11.0",
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
     "cheerio": "^0.20.0",
@@ -49,6 +60,7 @@
     "deferred": "^0.7.2",
     "diacritics": "^1.2.1",
     "elasticsearch": "^11.0.1",
+    "eslint": "^1.10.3",
     "express": "^4.12.4",
     "faye": "^1.1.1",
     "mkdirp": "^0.5.1",
@@ -68,8 +80,6 @@
     "winston": "^2.1.1"
   },
   "devDependencies": {
-    "babel-eslint": "^5.0.0-beta6",
-    "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
     "coveralls": "^2.10.0",
     "eslint": "^1.1.0",
@@ -80,8 +90,20 @@
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-jsdoc": "^1.1.0",
     "grunt-mocha-test": "^0.12.7",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-watch": "^4.3.9",
     "istanbul": "^0.4.1",
     "mocha": "^2.3.4",
     "mocha-traceur": "^2.1.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-0",
+      "stage-1",
+      "stage-2",
+      "stage-3"
+    ]
   }
 }
