--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,26 @@
 language: node_js
+
+os:
+  - "linux"
+  - "osx"
+
 node_js:
+  - "0.12"
   - "0.11"
   - "0.10"
+  - "6.1"
+  - "5.11"
+  - "4.4"
+
 services:
-  - couchdb
-  - mongodb
+  - elasticsearch
   - rabbitmq
+
 before_install:
   - "export NODE_ENV=test"
   - "npm config set strict-ssl false"
   - "npm install -g chai istanbul jsdoc mocha"
+
 before_script:
   - "sleep 10"
   - "curl -HContent-Type:application/json -vXPUT http://localhost:5984/_users/org.couchdb.user:apollo --data-binary '{\"_id\": \"org.couchdb.user:apollo\",\"name\": \"apollo\",\"roles\": [\"admin\"],\"type\": \"user\",\"password\": \"apollo\"}'"
