--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "winston": "^2.1.1"
   },
   "devDependencies": {
+    "babel-register": "^6.14.0",
     "chai": "^3.4.1",
     "coveralls": "^2.10.0",
     "eslint": "^1.1.0",
