--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Micro implementation of crawler",
   "main": "lib/index.js",
   "scripts": {
-    "eslint": "node ./node_modules/eslint/bin/eslint.js lib/ test/",
+    "eslint": "node ./node_modules/eslint/bin/eslint.js src/ test/",
     "test": "mocha --compilers js:babel-register test/**/*Test.js",
     "build": "gulp babel"
   },
@@ -43,7 +43,7 @@
     "amdefine": "^1.0.0",
     "amqplib": "^0.4.2",
     "babel-cli": "^6.14.0",
-    "babel-eslint": "^5.0.0-beta6",
+    "babel-eslint": "^6.1.2",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.3.13",
     "babel-preset-stage-1": "^6.13.0",
@@ -51,7 +51,7 @@
     "babel-preset-stage-3": "^6.11.0",
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
-    "cheerio": "^0.20.0",
+    "cheerio": "^0.22.0",
     "commander": "^2.9.0",
     "couchbase": "^2.2.2",
     "crypto": "0.0.3",
@@ -82,14 +82,16 @@
     "babel-register": "^6.14.0",
     "chai": "^3.4.1",
     "coveralls": "^2.10.0",
-    "eslint": "^1.1.0",
-    "eslint-config-airbnb": "2.1.1",
-    "eslint-plugin-react": "^3.2.3",
+    "eslint": "^3.4.0",
+    "eslint-config-airbnb": "10.0.1",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-jsx-a11y": "^2.2.0",
+    "eslint-plugin-react": "^6.2.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-watch": "^4.3.9",
     "istanbul": "^0.4.1",
-    "mocha": "^2.3.4",
+    "mocha": "^3.0.2",
     "mocha-traceur": "^2.1.0"
   },
   "babel": {
