--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "elasticsearch": "^11.0.1",
     "express": "^4.12.4",
     "faye": "^1.1.1",
+    "microcrawler-crawler-all": "0.0.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.10.3",
     "nano": "^6.0.2",
