--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,16 @@ node_js:
   - 6
   - iojs
 
+env:
+  - CXX=g++-4.8
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+
 services:
   - elasticsearch
   - rabbitmq
