--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "eslint-plugin-react": "^6.2.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-eslint": "^3.0.1",
     "gulp-watch": "^4.3.9",
     "istanbul": "^0.4.5",
     "mocha": "^3.0.2",
@@ -111,9 +112,7 @@
   },
   "config": {
     "client": "superagent",
-
     "timeout": 10000,
-
     "throttler": {
       "enabled": false,
       "active": true,
@@ -121,30 +120,25 @@
       "ratePer": 1000,
       "concurrent": 8
     },
-
     "retry": {
       "count": 2
     },
-
     "headers": {
       "Accept": "*/*",
       "User-Agent": "Mozilla/5.0 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)",
       "From": "googlebot(at)googlebot.com"
     },
-
     "proxy": {
       "enabled": false,
       "list": [
         "https://168.63.20.19:8145"
       ]
     },
-
     "natFaker": {
       "enabled": true,
       "base": "192.168.1.1",
       "bits": 16
     },
-
     "amqp": {
       "uri": "amqp://rabbitmq",
       "queues": {
@@ -155,14 +149,11 @@
         "heartbeat": 60
       }
     },
-
     "couchbase": {
       "uri": "couchbase://couchbase:8091",
-
       "bucket": "microcrawler",
       "username": "Administrator",
       "password": "Administrator",
-
       "connectionTimeout": 60000000,
       "durabilityTimeout": 60000000,
       "managementTimeout": 60000000,
@@ -170,7 +161,6 @@
       "operationTimeout": 10000000,
       "viewTimeout": 10000000
     },
-
     "elasticsearch": {
       "uri": "elasticsearch:9200",
       "index": "microcrawler",
